# ontology-term-usage

./: .gitignore  Makefile  README.md  main.py  package.json  pyproject.toml  serverless.yaml
ontology_term_usage/: __init__.py  term_usage.py
ontology_term_usage/app/: main.py
tests/: test_metadata.py  test_ontology_term_usage.py
